manual perf ehnancement +